[opcional 3.3] Definir nuevos estilos que usen las fuentes de FirefoxOS FiraSans y FiraMono

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -47,7 +47,12 @@ div .wrapper-fonts {
 	src: url(../fonts/fira-sans/FiraSansOT-RegularItalic.otf);
 }
 
-.wrapper-fonts .firefox {
+.wrapper-fonts .firefox-firamono {
+	font-family: FiraMono-Regular, serif;
+}
+
+.wrapper-fonts .firefox-firasans {
+	font-family: FiraSans-Regular, serif;
 }
 
 .wrapper-fonts .google {
