--- a/css/reloj.css
+++ b/css/reloj.css
@@ -10,10 +10,14 @@ body, html {
 	background-color: #db4e36;
 	color: #db4e36;
 	font-family: sans-serif;
-	font-size: 3em;
+	font-size: 1em;
 	font-weight: bold;
 	text-align: center;
-	padding: 0.5em;
+	padding: 0.1em;
+	top: 90px;
+	position: absolute;
+	left: 46%;
+	width: 8%;
 }
 
 svg line {
@@ -22,7 +26,7 @@ svg line {
 }
 
 #relojDigital {
-  padding-top: 0.2em;
+  padding-top: 0.1em;
   background-color: #FFF;
 }
 
