--- a/css/reloj.css
+++ b/css/reloj.css
@@ -6,28 +6,16 @@ body, html {
 	background-color: #eee;
 }
 
-.relojDigitalWrapper {
-	background-color: #db4e36;
-	color: #db4e36;
-	font-family: sans-serif;
-	font-size: 1em;
-	font-weight: bold;
-	text-align: center;
-	padding: 0.1em;
-	top: 90px;
-	position: absolute;
-	left: 46%;
-	width: 8%;
-}
-
 svg line {
 	stroke: grey;
 	stroke-width: 5;
 }
 
 #relojDigital {
-  padding-top: 0.1em;
   background-color: #FFF;
+  font-family: sans-serif;
+  font-size: 0.75em;
+  stroke: #db4e36;
 }
 
 #relojAnalogico {
