[practica 8] Añadir el botón de compactar rutas, que de momento sólo escribe por consola un log

--- a/css/practica8.css
+++ b/css/practica8.css
@@ -18,9 +18,13 @@ body{
   margin: 0;
   padding: 0;
   position: absolute; /* posición absoluta a navegador */
-  top: 50px;      /* 50px debajo de borde de navegador */
+  top: 100px;      /* 100px debajo de borde de navegador */
   left: 0;        /* ajusta a borde de navegador */
   right: 0;
   bottom: 0;
   background: rgba(0,255,0,0.5); /* verde si no hay mapa */
+}
+
+.buttons {
+  height: 50px;
 }
